Added email intervals
- Added the ability to send emails in intervals, relative to the day
  that the user's password is expiring. This will prevent emails from
  being sent daily.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,14 @@
                                     "description": "The number of days the password can be valid.",
                                     "type": "integer"
                                 },
+                                "emailIntervalsEnabled": {
+                                    "description": "Whether emails intervals should be enabled or not.",
+                                    "type": "boolean"
+                                },
+                                "emailIntervalDays": {
+                                    "description": "The days, relative to the password expiring, to send an email",
+                                    "type": "array"
+                                },
                                 "emailTemplateId": {
                                     "description": "The unique identifier for the email template to use.",
                                     "type": "string",
