--- a/src/PasswordExpiration.Lib/PasswordExpiration.Lib.csproj
+++ b/src/PasswordExpiration.Lib/PasswordExpiration.Lib.csproj
@@ -1,13 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.35.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.36.2" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmallsOnline.MsGraphClient\src\SmallsOnline.MsGraphClient\SmallsOnline.MsGraphClient.csproj" />
   </ItemGroup>
 
 </Project>
