Change package source
- Changed package source for 'SmallsOnline.MsGraphClient' to pull from
  my GitHub package registry.

--- a/src/PasswordExpiration.Lib/PasswordExpiration.Lib.csproj
+++ b/src/PasswordExpiration.Lib/PasswordExpiration.Lib.csproj
@@ -7,11 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Identity.Client" Version="4.36.2" />
+    <PackageReference Include="SmallsOnline.MsGraphClient" Version="2021.10.0" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SmallsOnline.MsGraphClient\src\SmallsOnline.MsGraphClient\SmallsOnline.MsGraphClient.csproj" />
   </ItemGroup>
 
 </Project>
